Backwards compatibility for redstone particle, update citizens integration (#91)
- backwards compatibility for redstone particle configuration parameter
- citizens update